--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/Github.png">
+              <img src="img/Github.PNG">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
