update index img

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/Github.PNG">
+              <img src="img/github.png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -85,7 +85,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/Wikipedia.png">
+              <img src="img/wikipedia.png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -107,7 +107,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/Audioplayer.png">
+              <img src="img/audioplayer.png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -129,7 +129,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/Bookmark.png">
+              <img src="img/bookmark.png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -151,7 +151,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/Quote.png">
+              <img src="img/quote.png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -174,7 +174,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/Slider.png">
+              <img src="img/slider.png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -196,7 +196,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/Weather.png">
+              <img src="img/weather.png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
