update img on index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="Img/MAP.PNG">
+              <img src="img/Map.Png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -63,7 +63,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/github.png">
+              <img src="img/Github.Png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -85,7 +85,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/wikipedia.png">
+              <img src="img/Wikipedia.Png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -107,7 +107,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/audioplayer.png">
+              <img src="img/Audioplayer.Png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -129,7 +129,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/bookmark.png">
+              <img src="img/Bookmark.Png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -151,7 +151,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/quote.png">
+              <img src="img/Quote.Png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -174,7 +174,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/slider.png">
+              <img src="img/Slider.Png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -196,7 +196,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/weather.png">
+              <img src="img/Weather.Png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
