--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
         });
         sr.reveal('.showcase-left', {
           duration: 2000,
-          origin:'left',
+          origin:'bottom',
+          delay: 500,
           distance:'300px'
         });
         sr.reveal('.showcase-right', {
