--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
         });
         sr.reveal('.showcase-left', {
           duration: 2000,
-          origin:'bottom',
-          delay: 500,
+          origin:'left',
+          delay: 1000,
           distance:'300px'
         });
         sr.reveal('.showcase-right', {
