--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="file:///C:/Github/portfolio/img/map.PNG">
+              <img src="File:///C:/Github/Portfolio/Img/Map.PNG">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
