--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="File:///C:/Github/Portfolio/Img/Map.PNG">
+              <img src="Map.PNG">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
@@ -85,7 +85,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/Wikipedia.Png">
+              <img src="Wikipedia.Png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
