--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="showcase-right">
+            <div class="showcase-right">+
               <h1>Map app</h1>
               <p><b>Description: </b>A simple map that keeps track of all the locations I have been to in the US</p>
               <p><b>Skills & Tools: </b>Google Maps Api - JQuery</p>
@@ -63,7 +63,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="img/Github.Png">
+              <img src="IMG/GITHUB.PNG">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
