--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="Map.PNG">
+              <img src="map.png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
