--- a/index.html
+++ b/index.html
@@ -36,22 +36,23 @@
       </div>
     </section>
 <br><br><br><br><br><br><br><br><br><br><br>
+
     <section id="showcase">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="map.png">
+              <img src="IMG/GITHUB.PNG">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="showcase-right">+
+            <div class="showcase-right">
               <h1>Map app</h1>
               <p><b>Description: </b>A simple map that keeps track of all the locations I have been to in the US</p>
               <p><b>Skills & Tools: </b>Google Maps Api - JQuery</p>
             </div>
             <br>
-            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/audioplayer">Github</a>
+            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/map-app">Github</a>
           </div>
         </div>
       </div>
@@ -69,11 +70,11 @@
           <div class="col-md-6 col-sm-6">
             <div class="showcase-right">
               <h1>Github Search Engine</h1>
-              <p><b>Description: </b>A simple map that keeps track of all the locations I have been to in the US</p>
-              <p><b>Skills & Tools: </b>Google Maps Api - JQuery</p>
+              <p><b>Description: </b>A simple program that uses github's api to look users on github</p>
+              <p><b>Skills & Tools: </b>Github API - JS</p>
             </div>
             <br>
-            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/audioplayer">Github</a>
+            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/githubSearchEngine">Github</a>
           </div>
         </div>
       </div>
@@ -91,11 +92,11 @@
           <div class="col-md-6 col-sm-6">
             <div class="showcase-right">
               <h1>Wikipedia Search Engine</h1>
-              <p><b>Description: </b>A simple map that keeps track of all the locations I have been to in the US</p>
-              <p><b>Skills & Tools: </b>Google Maps Api - JQuery</p>
+              <p><b>Description: </b>A simple program that uses the Wikipedia API.</p>
+              <p><b>Skills & Tools: </b>Wikipedia API - JS</p>
             </div>
             <br>
-            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/audioplayer">Github</a>
+            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/wikipediaSearchEngine">Github</a>
           </div>
         </div>
       </div>
@@ -113,8 +114,8 @@
           <div class="col-md-6 col-sm-6">
             <div class="showcase-right">
               <h1>My Audio Player</h1>
-              <p><b>Description: </b>A simple map that keeps track of all the locations I have been to in the US</p>
-              <p><b>Skills & Tools: </b>Google Maps Api - JQuery</p>
+              <p><b>Description: </b>A simple audio player containing my songs</p>
+              <p><b>Skills & Tools: </b>JQuery</p>
             </div>
             <br>
             <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/audioplayer" target="_blank">Github</a>
@@ -136,10 +137,10 @@
             <div class="showcase-right">
               <h1>A Bookmarker</h1>
               <p><b>Description: </b>Simple program that saves your bookmarks! You only need to input the name of the site and its URL and you can go back to it whenever you want!</p>
-              <p><b>Skills & Tools: </b>Google Maps Api - JQuery</p>
+              <p><b>Skills & Tools: </b>js - HTML/CSS</p>
             </div>
             <br>
-            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/audioplayer">Github</a>
+            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/bookmarker">Github</a>
           </div>
         </div>
       </div>
@@ -184,7 +185,7 @@
               <p><b>Skills & Tools: </b>JQuery</p>
             </div>
             <br>
-            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/audioplayer">Github</a>
+            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/imgSlider">Github</a>
           </div>
         </div>
       </div>
@@ -206,7 +207,7 @@
               <p><b>Skills & Tools: </b>JQuery</p>
             </div>
             <br>
-            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/audioplayer">Github</a>
+            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/weatherJS">Github</a>
           </div>
         </div>
       </div>
