--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Portfolio</title>
+    <title>Website Template</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto%7CJosefin+Sans:100,300,400,500" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -18,7 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">MarouaneAbra</a>
+          <a class="navbar-brand" href="#">Lorem Ipsum</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -32,7 +32,7 @@
 <br><br><br><br><br><br><br>
     <section id="statement">
       <div class="container">
-        <p>I simply love coding</p>
+        <p>Morbi in ipsum sit amet pede facilisis laoreet</p>
       </div>
     </section>
 <br><br><br><br><br><br><br><br><br><br><br>
@@ -42,17 +42,17 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="IMG/GITHUB.PNG">
+              <img src="img/lorem.png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
             <div class="showcase-right">
-              <h1>Map app</h1>
-              <p><b>Description: </b>A simple map that keeps track of all the locations I have been to in the US</p>
-              <p><b>Skills & Tools: </b>Google Maps Api - JQuery</p>
+              <h1>Project1</h1>
+              <p><b>Description: </b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. </p>
+              <p><b>Skills & Tools: </b>Class aptent taciti sociosqu ad litora torquent per conubia nostra</p>
             </div>
             <br>
-            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/map-app">Github</a>
+            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/website-template">Github</a>
           </div>
         </div>
       </div>
@@ -64,17 +64,17 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="IMG/GITHUB.PNG">
+              <img src="img/lorem.png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
             <div class="showcase-right">
-              <h1>Github Search Engine</h1>
-              <p><b>Description: </b>A simple program that uses github's api to look users on github</p>
-              <p><b>Skills & Tools: </b>Github API - JS</p>
+              <h1>Project2</h1>
+              <p><b>Description: </b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. </p>
+              <p><b>Skills & Tools: </b>Class aptent taciti sociosqu ad litora torquent per conubia nostra</p>
             </div>
             <br>
-            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/githubSearchEngine">Github</a>
+            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/website-template">Github</a>
           </div>
         </div>
       </div>
@@ -86,17 +86,17 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="showcase-left">
-              <img src="Wikipedia.Png">
+              <img src="img/lorem.png">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
             <div class="showcase-right">
-              <h1>Wikipedia Search Engine</h1>
-              <p><b>Description: </b>A simple program that uses the Wikipedia API.</p>
-              <p><b>Skills & Tools: </b>Wikipedia API - JS</p>
+              <h1>Project3</h1>
+              <p><b>Description: </b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. </p>
+              <p><b>Skills & Tools: </b>Class aptent taciti sociosqu ad litora torquent per conubia nostra</p>
             </div>
             <br>
-            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/wikipediaSearchEngine">Github</a>
+            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/website-template">Github</a>
           </div>
         </div>
       </div>
