updated contact form section

--- a/index.html
+++ b/index.html
@@ -103,124 +103,13 @@
     </section>
     <br><br><br><br>
 
-    <section id="showcase">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-sm-6">
-            <div class="showcase-left">
-              <img src="img/Audioplayer.Png">
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-6">
-            <div class="showcase-right">
-              <h1>My Audio Player</h1>
-              <p><b>Description: </b>A simple audio player containing my songs</p>
-              <p><b>Skills & Tools: </b>JQuery</p>
-            </div>
-            <br>
-            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/audioplayer" target="_blank">Github</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <br><br><br><br>
-
-    <section id="showcase">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-sm-6">
-            <div class="showcase-left">
-              <img src="img/Bookmark.Png">
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-6">
-            <div class="showcase-right">
-              <h1>A Bookmarker</h1>
-              <p><b>Description: </b>Simple program that saves your bookmarks! You only need to input the name of the site and its URL and you can go back to it whenever you want!</p>
-              <p><b>Skills & Tools: </b>js - HTML/CSS</p>
-            </div>
-            <br>
-            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/bookmarker">Github</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <br><br><br><br>
-
-    <section id="showcase">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-sm-6">
-            <div class="showcase-left">
-              <img src="img/Quote.Png">
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-6">
-            <div class="showcase-right">
-              <h1>Quote Generator</h1>
-              <p><b>Description: </b>This random quote generator program is a practice of HTML, CSS and Javascript with the use of an external API using getJSON and JQuery
-              This also gives you the option to directly share your favorite quote on Twitter! You might need to edit the quote if it fails the length requirement of a tweet.</p>
-              <p><b>Skills & Tools: </b>Google Maps Api - JQuery</p>
-            </div>
-            <br>
-            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/quotegenerator">Github</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <br><br><br><br>
-
-    <section id="showcase">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-sm-6">
-            <div class="showcase-left">
-              <img src="img/Slider.Png">
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-6">
-            <div class="showcase-right">
-              <h1>Image Slider</h1>
-              <p><b>Description: </b>Very simple image slider using JQuery!</p>
-              <p><b>Skills & Tools: </b>JQuery</p>
-            </div>
-            <br>
-            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/imgSlider">Github</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <br><br><br><br>
-
-    <section id="showcase">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-sm-6">
-            <div class="showcase-left">
-              <img src="img/Weather.Png">
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-6">
-            <div class="showcase-right">
-              <h1>Weather App</h1>
-              <p><b>Description: </b>Simple weather program that gives you the weather automatically absed on your location</p>
-              <p><b>Skills & Tools: </b>JQuery</p>
-            </div>
-            <br>
-            <a class="btn btn-default btn-lg showcase-btn" href="https://github.com/marouaneabra/weatherJS">Github</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <br><br><br><br>
-
     <section id="contact">
       <div class="container">
         <div class="row">
           <div class="col-md-5 col-sm-5">
-            <form method="POST" action = "https://formspree.io/marouane.abra@gmail.com">
+            <form method="POST" action = "https://formspree.io/lorem.ipsum@gmail.com">
               <div class="form-group">
-                <h1 id="nice">Hope you had a great time, Send Me Nice Words!</h1>
+                <h1 id="nice">Sed lectus. Integer euismod lacus luctus magna.!</h1>
                 <label>Name: </label>
                 <input class="form-control" type="text" name="" value="" placeholder="Enter Name">
               </div>
